// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emits deterministic narrow modules, documented names and extension-compatible facades 1`] = `
{
  "facade": "export type { OperationsError, OperationsContext } from "./Operations.lookup.js"
export * from "./Operations.lookup.js"
export * from "./Operations.findMood.js"
export * from "./Operations.other.js"
export * from "./Operations.save.js"
",
  "models": "import { Info } from "./Models.Info.js"
import { Mood } from "./Models.Mood.js"
/**
 * Effect Schema models for FixtureService OData service.
 * Generated by odata-effect-gen.
 *
 * @since 1.0.0
 */
import * as Schema from "effect/Schema"

/**
 * Target decoded model.
 *
 * Navigation properties are optional because OData only includes them
 * when requested with $expand or returned as deferred V2 links.
 *
 * @since 1.0.0
 * @category models
 */
export interface Result {
  readonly id: string
  readonly details: ReadonlyArray<Info>
  readonly mood: Mood
  readonly peers?: ReadonlyArray<Result> | null | undefined
}

/**
 * Target entity type.
 *
 * @since 1.0.0
 * @category models
 */
export const Result = /*#__PURE__*/ (() => Schema.Struct({
  id: Schema.String,
  details: Schema.Array(Schema.suspend((): Schema.Codec<Info, unknown, never, never> => Info)),
  mood: Schema.suspend((): Schema.Codec<Mood, unknown, never, never> => Mood),
  peers: Schema.optional(Schema.NullOr(Schema.Array(Schema.suspend((): Schema.Codec<Result, unknown, never, never> => Result))))
}).pipe(Schema.encodeKeys({ id: "ID", details: "Details", mood: "Mood", peers: "Peers" })))() satisfies Schema.Codec<Result, unknown, never, never>

/**
 * Target ID type.
 *
 * @since 1.0.0
 * @category models
 */
export const ResultId = /*#__PURE__*/ (() => Schema.Union([
  Schema.String,
  Schema.Struct({ id: Schema.String })
]))()
export type ResultId = typeof ResultId.Type

/** Create input for Target. @since 1.3.0 @category models */
export const CreateResult = /*#__PURE__*/ (() => Schema.Struct({
  id: Schema.String,
  details: Schema.Array(Schema.suspend((): Schema.Codec<Info, unknown, never, never> => Info)),
  mood: Schema.suspend((): Schema.Codec<Mood, unknown, never, never> => Mood)
}).pipe(Schema.encodeKeys({ id: "ID", details: "Details", mood: "Mood" })))()
export type CreateResult = typeof CreateResult.Type

/**
 * Editable Target for creating/updating operations.
 *
 * @since 1.0.0
 * @category models
 */
export const EditableResult = /*#__PURE__*/ (() => Schema.Struct({
  details: Schema.Array(Schema.suspend((): Schema.Codec<Info, unknown, never, never> => Info)),
  mood: Schema.suspend((): Schema.Codec<Mood, unknown, never, never> => Mood)
}).pipe(Schema.encodeKeys({ details: "Details", mood: "Mood" })))()
export type EditableResult = typeof EditableResult.Type

/**
 * Partial editable Target for update operations.
 *
 * @since 1.0.0
 * @category models
 */
export const PartialEditableResult = /*#__PURE__*/ (() => Schema.Struct({
  details: Schema.optional(Schema.Array(Schema.suspend((): Schema.Codec<Info, unknown, never, never> => Info))),
  mood: Schema.optional(Schema.suspend((): Schema.Codec<Mood, unknown, never, never> => Mood))
}).pipe(Schema.encodeKeys({ details: "Details", mood: "Mood" })))()
export type PartialEditableResult = typeof PartialEditableResult.Type
",
  "operation": "/**
 * OData operations for FixtureService OData V4.
 * Generated by odata-effect-gen.
 *
 * @since 1.0.0
 */
import * as Effect from "effect/Effect"
import { HttpClient } from "effect/unstable/http"
import type * as HttpClientError from "effect/unstable/http/HttpClientError"

import * as ODataOps from "@odata-effect/odata-effect/Operations"
import {
  ODataClientConfig
} from "@odata-effect/odata-effect/ODataV4"
import {
  type ODataError,
  type ParseError
} from "@odata-effect/odata-effect/Errors"

import { Result } from "./Models.Result.js"

// ============================================================================
// Types
// ============================================================================

/**
 * Error type for operation calls.
 *
 * @since 1.0.0
 * @category errors
 */
export type OperationsError =
  | HttpClientError.HttpClientError
  | ParseError
  | ODataError

/**
 * Dependencies required for operation calls.
 *
 * @since 1.0.0
 * @category context
 */
export type OperationsContext = ODataClientConfig | HttpClient.HttpClient

// ============================================================================
// Operations
// ============================================================================

/**
 * Parameters for Find operation.
 *
 * @since 1.0.0
 * @category params
 */
export interface FindParams {
  readonly term: string
}

/**
 * Execute the Find function.
 *
 * @since 1.0.0
 * @category operations
 */
export const lookup = (
  params: FindParams
): Effect.Effect<
  ReadonlyArray<Result>,
  OperationsError,
  OperationsContext
> =>
  Effect.gen(function*() {
    const config = yield* ODataClientConfig
    const client = yield* HttpClient.HttpClient

    const parameters: ODataOps.OperationParameters = {
      "Search": params.term,
    }
    const url = ODataOps.buildV4FunctionUrl("Find", parameters)

    return yield* ODataOps.executeV4FunctionCollection(client, config, url, Result)
  })
",
}
`;

exports[`emits deterministic narrow modules, documented names and extension-compatible facades 2`] = `
{
  "facade": "export type { OperationsError, OperationsContext } from "./Operations.lookup"
export * from "./Operations.lookup"
export * from "./Operations.findMood"
export * from "./Operations.other"
export * from "./Operations.save"
",
  "models": "import { Info } from "./Models.Info"
import { Mood } from "./Models.Mood"
/**
 * Effect Schema models for FixtureService OData service.
 * Generated by odata-effect-gen.
 *
 * @since 1.0.0
 */
import * as Schema from "effect/Schema"

/**
 * Target decoded model.
 *
 * Navigation properties are optional because OData only includes them
 * when requested with $expand or returned as deferred V2 links.
 *
 * @since 1.0.0
 * @category models
 */
export interface Result {
  readonly id: string
  readonly details: ReadonlyArray<Info>
  readonly mood: Mood
  readonly peers?: ReadonlyArray<Result> | null | undefined
}

/**
 * Target entity type.
 *
 * @since 1.0.0
 * @category models
 */
export const Result = /*#__PURE__*/ (() => Schema.Struct({
  id: Schema.String,
  details: Schema.Array(Schema.suspend((): Schema.Codec<Info, unknown, never, never> => Info)),
  mood: Schema.suspend((): Schema.Codec<Mood, unknown, never, never> => Mood),
  peers: Schema.optional(Schema.NullOr(Schema.Array(Schema.suspend((): Schema.Codec<Result, unknown, never, never> => Result))))
}).pipe(Schema.encodeKeys({ id: "ID", details: "Details", mood: "Mood", peers: "Peers" })))() satisfies Schema.Codec<Result, unknown, never, never>

/**
 * Target ID type.
 *
 * @since 1.0.0
 * @category models
 */
export const ResultId = /*#__PURE__*/ (() => Schema.Union([
  Schema.String,
  Schema.Struct({ id: Schema.String })
]))()
export type ResultId = typeof ResultId.Type

/** Create input for Target. @since 1.3.0 @category models */
export const CreateResult = /*#__PURE__*/ (() => Schema.Struct({
  id: Schema.String,
  details: Schema.Array(Schema.suspend((): Schema.Codec<Info, unknown, never, never> => Info)),
  mood: Schema.suspend((): Schema.Codec<Mood, unknown, never, never> => Mood)
}).pipe(Schema.encodeKeys({ id: "ID", details: "Details", mood: "Mood" })))()
export type CreateResult = typeof CreateResult.Type

/**
 * Editable Target for creating/updating operations.
 *
 * @since 1.0.0
 * @category models
 */
export const EditableResult = /*#__PURE__*/ (() => Schema.Struct({
  details: Schema.Array(Schema.suspend((): Schema.Codec<Info, unknown, never, never> => Info)),
  mood: Schema.suspend((): Schema.Codec<Mood, unknown, never, never> => Mood)
}).pipe(Schema.encodeKeys({ details: "Details", mood: "Mood" })))()
export type EditableResult = typeof EditableResult.Type

/**
 * Partial editable Target for update operations.
 *
 * @since 1.0.0
 * @category models
 */
export const PartialEditableResult = /*#__PURE__*/ (() => Schema.Struct({
  details: Schema.optional(Schema.Array(Schema.suspend((): Schema.Codec<Info, unknown, never, never> => Info))),
  mood: Schema.optional(Schema.suspend((): Schema.Codec<Mood, unknown, never, never> => Mood))
}).pipe(Schema.encodeKeys({ details: "Details", mood: "Mood" })))()
export type PartialEditableResult = typeof PartialEditableResult.Type
",
  "operation": "/**
 * OData operations for FixtureService OData V4.
 * Generated by odata-effect-gen.
 *
 * @since 1.0.0
 */
import * as Effect from "effect/Effect"
import { HttpClient } from "effect/unstable/http"
import type * as HttpClientError from "effect/unstable/http/HttpClientError"

import * as ODataOps from "@odata-effect/odata-effect/Operations"
import {
  ODataClientConfig
} from "@odata-effect/odata-effect/ODataV4"
import {
  type ODataError,
  type ParseError
} from "@odata-effect/odata-effect/Errors"

import { Result } from "./Models.Result"

// ============================================================================
// Types
// ============================================================================

/**
 * Error type for operation calls.
 *
 * @since 1.0.0
 * @category errors
 */
export type OperationsError =
  | HttpClientError.HttpClientError
  | ParseError
  | ODataError

/**
 * Dependencies required for operation calls.
 *
 * @since 1.0.0
 * @category context
 */
export type OperationsContext = ODataClientConfig | HttpClient.HttpClient

// ============================================================================
// Operations
// ============================================================================

/**
 * Parameters for Find operation.
 *
 * @since 1.0.0
 * @category params
 */
export interface FindParams {
  readonly term: string
}

/**
 * Execute the Find function.
 *
 * @since 1.0.0
 * @category operations
 */
export const lookup = (
  params: FindParams
): Effect.Effect<
  ReadonlyArray<Result>,
  OperationsError,
  OperationsContext
> =>
  Effect.gen(function*() {
    const config = yield* ODataClientConfig
    const client = yield* HttpClient.HttpClient

    const parameters: ODataOps.OperationParameters = {
      "Search": params.term,
    }
    const url = ODataOps.buildV4FunctionUrl("Find", parameters)

    return yield* ODataOps.executeV4FunctionCollection(client, config, url, Result)
  })
",
}
`;
